[gd_scene load_steps=32 format=2]

[ext_resource path="res://Script/Entities/LevelMechanic/BoostPlatform/BoostPlatform.gd" type="Script" id=1]
[ext_resource path="res://Art/Entity/LevelMechanic/FallPlatform/platform_tilemap.png" type="Texture" id=2]
[ext_resource path="res://Art/Entity/LevelMechanic/FallPlatform/platform_direction.png" type="Texture" id=3]
[ext_resource path="res://Script/Entities/LevelMechanic/BoostPlatform/Rumble.gd" type="Script" id=4]
[ext_resource path="res://Script/Entities/Util/StateMachine/StateMachine.gd" type="Script" id=5]
[ext_resource path="res://Script/Entities/Util/StateMachine/TransitConditions.gd" type="Script" id=6]
[ext_resource path="res://Script/Entities/LevelMechanic/BoostPlatform/RootState.gd" type="Script" id=7]
[ext_resource path="res://Script/Entities/LevelMechanic/BoostPlatform/Idle.gd" type="Script" id=8]
[ext_resource path="res://Script/Entities/LevelMechanic/BoostPlatform/Active.gd" type="Script" id=9]
[ext_resource path="res://Script/Entities/LevelMechanic/BoostPlatform/Respawn.gd" type="Script" id=10]
[ext_resource path="res://Script/Entities/LevelMechanic/BoostPlatform/OneWayBody.gd" type="Script" id=11]

[sub_resource type="OccluderPolygon2D" id=15]
polygon = PoolVector2Array( 1, 1, 13, 1, 13, 13, 1, 13 )

[sub_resource type="OccluderPolygon2D" id=16]
polygon = PoolVector2Array( 13, 13, 1, 13, 1, 1, 13, 1 )

[sub_resource type="OccluderPolygon2D" id=17]
polygon = PoolVector2Array( 13, 13, 1, 13, 1, 1, 13, 1 )

[sub_resource type="OccluderPolygon2D" id=18]
polygon = PoolVector2Array( 13, 13, 1, 13, 1, 1, 13, 1 )

[sub_resource type="OccluderPolygon2D" id=19]
polygon = PoolVector2Array( 13, 1, 1, 1, 1, 13, 13, 13 )

[sub_resource type="OccluderPolygon2D" id=20]
polygon = PoolVector2Array( 13, 13, 1, 13, 1, 1, 13, 1 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 1, 1, 13, 1, 13, 13, 1, 13 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 1, 1, 13, 1, 13, 13, 1, 13 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 14, 13, 2, 13, 2, 1, 14, 1 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 1, 12, 1, 12, 13, 0, 13 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 14, 13, 2, 13, 2, 1, 14, 1 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 12, 13, 0, 13, 0, 1, 12, 1 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 13, 5, 1, 5, 1, 1, 13, 1 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 13, 5, 1, 5, 1, 1, 13, 1 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 13, 5, 1, 5, 1, 1, 13, 1 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 13, 5, 1, 5, 1, 1, 13, 1 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 13, 5, 1, 5, 1, 1, 13, 1 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 13, 5, 1, 5, 1, 1, 13, 1 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 13, 5, 1, 5, 1, 1, 13, 1 )

[sub_resource type="TileSet" id=1]
0/name = "platform_tilemap.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 98, 28 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 16, Vector2( 1, 0 ), 16, Vector2( 2, 0 ), 48, Vector2( 3, 0 ), 24, Vector2( 4, 0 ), 48, Vector2( 5, 0 ), 24 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 14, 14 )
0/autotile/spacing = 0
0/autotile/occluder_map = [ Vector2( 0, 0 ), SubResource( 15 ), Vector2( 1, 0 ), SubResource( 16 ), Vector2( 2, 0 ), SubResource( 17 ), Vector2( 3, 0 ), SubResource( 18 ), Vector2( 4, 0 ), SubResource( 19 ), Vector2( 5, 0 ), SubResource( 20 ) ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "platform_tilemap.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 98, 28 )
1/tile_mode = 1
1/autotile/bitmask_mode = 1
1/autotile/bitmask_flags = [ Vector2( 0, 1 ), 48, Vector2( 1, 1 ), 56, Vector2( 2, 1 ), 56, Vector2( 3, 1 ), 56, Vector2( 4, 1 ), 56, Vector2( 5, 1 ), 24, Vector2( 6, 1 ), 16 ]
1/autotile/icon_coordinate = Vector2( 6, 1 )
1/autotile/tile_size = Vector2( 14, 14 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 8 )
1/shape_one_way = true
1/shape_one_way_margin = 3.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 1 ),
"one_way": true,
"one_way_margin": 3.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": true,
"one_way_margin": 3.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": true,
"one_way_margin": 3.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": true,
"one_way_margin": 3.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": true,
"one_way_margin": 3.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 1 ),
"one_way": true,
"one_way_margin": 3.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 1 ),
"one_way": true,
"one_way_margin": 3.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[node name="BoostPlatform" type="KinematicBody2D"]
z_index = 1
collision_mask = 0
script = ExtResource( 1 )

[node name="StumpTile" type="TileMap" parent="."]
z_index = 1
tile_set = SubResource( 1 )
cell_size = Vector2( 12, 12 )
centered_textures = true
collision_use_parent = true
format = 1
tile_data = PoolIntArray( 0, 0, 0, 3, 0, 1 )

[node name="OneWayBody" type="KinematicBody2D" parent="."]
collision_layer = 32
collision_mask = 0
script = ExtResource( 11 )
__meta__ = {
"_editor_description_": "Is a separate body so it's on a collision layer such that you can stand on it, but not walljump and such on it"
}

[node name="PlatformTile" type="TileMap" parent="OneWayBody"]
tile_set = SubResource( 1 )
cell_size = Vector2( 12, 12 )
centered_textures = true
collision_use_parent = true
format = 1
tile_data = PoolIntArray( 1, 1, 65536, 2, 1, 65541 )

[node name="Arrow1" type="Sprite" parent="."]
position = Vector2( 6, 7 )
z_index = 2
texture = ExtResource( 3 )
hframes = 4
vframes = 2
region_rect = Rect2( 0, 0, 6, 6 )

[node name="Arrow2" type="Sprite" parent="."]
position = Vector2( 42, 7 )
z_index = 2
texture = ExtResource( 3 )
hframes = 4
vframes = 2
region_rect = Rect2( 0, 0, 6, 6 )

[node name="SM" type="Node" parent="."]
script = ExtResource( 5 )

[node name="RootState" type="Node" parent="SM"]
script = ExtResource( 7 )

[node name="Idle" type="Node" parent="SM/RootState"]
script = ExtResource( 8 )

[node name="Rumble" type="Node" parent="SM/RootState"]
script = ExtResource( 4 )

[node name="Active" type="Node" parent="SM/RootState"]
script = ExtResource( 9 )

[node name="Respawn" type="Node" parent="SM/RootState"]
script = ExtResource( 10 )

[node name="TransitConditions" type="Node" parent="SM"]
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="SM"]
one_shot = true
